Ajustando o conteúdo do card.

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,3 +1,5 @@
+/* class utilities */
+
 .grid {
   display: grid;
 }
@@ -12,4 +14,20 @@
 
 .gap-16 {
   gap: 16px;
+}
+
+.text-2xl {
+  font: var(--h1);
+}
+
+.text-xl {
+  font: var(--h2);
+}
+
+.text-lg {
+  font: var(--h3);
+}
+
+.text-sm {
+  font: var(--text-sm);
 }
